# MinaTheHollowerPracticeMod

./: .gitignore  CMakeLists.txt  MinaTest.vcxproj  MinaTest.vcxproj.filters  MinaTheHollowerPracticeMod.slnx  README.md  build_linux.sh  dllmain.cpp
otherFiles/: mod.yc
package/: package.bat  package.sh
unpak/: mod.yc
